Implementation postgreSQL instance, writing migrations to create required db tables and updating some properties in heroes-class

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx ts-node server/app.ts"
+    "start": "npx ts-node server/app.ts",
+    "migrate": "node-pg-migrate"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "node-pg-migrate": "^6.2.2",
+    "pg": "^8.8.0",
     "ts-node": "^10.9.1",
     "ws": "^8.11.0"
   }
