--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.4",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.8.0",
     "ts-node": "^10.9.1",
