--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.8.4",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.8.0",
+    "redis": "^4.6.2",
     "ts-node": "^10.9.1",
     "ws": "^8.11.0"
   }
